@@ -2589,4 +2589,9 @@ gdFont gdFontTinyRep =
 
 gdFontPtr gdFontTiny = &gdFontTinyRep;
 
+gdFontPtr gdFontGetTiny(void)
+{
+	return gdFontTiny;
+}
+
 /* This file has not been truncated. */
